syntax = "proto3";

package nacos.grpc;

option csharp_namespace = "RedNb.Nacos.GrpcClient.Protos";

// The common payload message
message Payload {
  Metadata metadata = 1;
  Body body = 2;
}

// The metadata
message Metadata {
  string type = 1;
  string clientIp = 2;
  map<string, string> headers = 3;
}

// The body content
message Body {
  bytes value = 1;
}

// Bi-directional streaming service
service BiRequestStream {
  // Bi-directional streaming RPC
  rpc RequestBiStream(stream Payload) returns (stream Payload);
}

// Request service for simple request-response
service RequestService {
  // Simple request-response
  rpc SendRequest(Payload) returns (Payload);
}
